--- a/app/views/courses/show/_campus.html.erb
+++ b/app/views/courses/show/_campus.html.erb
@@ -34,7 +34,7 @@
     </div>
   <% end %>
   <% if course.unit.sports_playground %>
-    <div class="my-2">
+    <div class="m-2">
       <h6 class="text-center"><i class="far fa-futbol" aria-hidden="true"></i></h6>
       <p class="text-center">Área de Esportes</p>
     </div>
@@ -44,16 +44,16 @@
 <span class="br-divider my-3"></span>
 
 <h5>Preços</h5>
-<div class="d-flex justify-content-around">
-  <div>
+<div class="d-flex">
+  <div class="mx-5 mb-5">
     <h6 class="text-center">Xerox</h6>
     <p class="text-center">R$<%= course.unit.xerox_cost %></p>
   </div>
-  <div>
+  <div class="mx-5 mb-5">
     <h6 class="text-center">Lanche</h6>
     <p class="text-center">R$<%= course.unit.snack_plus_drink_price %></p>
   </div>
-  <div>
+  <div class="mx-5 mb-5">
     <h6 class="text-center">Café</h6>
     <p class="text-center">R$<%= course.unit.coffe_price %></p>
   </div>
