--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,85 +1,42 @@
 <div class="container-lg">
-  <div class="logo d-none"><img src="https://i.ibb.co/vxd7qvG/Bizu-logo.png" alt="Imagem"/></div>
-  <div><br><H1 style="font-weight: bolder;font-style: italic;">BiZU</H1></div>
+  <div class="pt-2 px-4">
+    <img src="https://i.ibb.co/HxnKsvy/Bizu-removebg-preview.png" alt="Imagem" style="height: 80px;"/>
+  </div>
+  <%# <div><br><H1 style="font-weight: bolder;font-style: italic;">BiZU</H1></div> %>
   <div class="br-list horizontal" data-toggle="data-toggle" data-unique="data-unique">
     <div class="col-2"><a class="br-item header" href="https://www.gov.br/pt-br/servicos">
-        <div class="content text-up-01 text-bold text-uppercase">SERVIÇOS</div>
-        <div class="support"><i class="fas fa-angle-up" aria-hidden="true"></i>
-        </div></a>
+      <div class="content text-up-01 text-bold text-uppercase">SERVIÇOS</div>
+      <div class="support"><i class="fas fa-angle-up" aria-hidden="true"></i></div></a>
       <div class="br-list"><span class="br-divider d-md-none"></span><a class="br-item" href="https://www.gov.br/pt-br/servicos/buscar-servicos-por">
-          <div class="content">Buscar serviços por</div></a><a class="br-item" href="https://www.gov.br/pt-br/servicos/servicos-por-publico-alvo">
-          <div class="content">Serviços por público alvo</div></a><a class="br-item d-none" href="javascript:void(0)">
-          <div class="content d-none">Est ex deserunt</div></a><a class="br-item d-none" href="javascript:void(0)">
-          <div class="content d-none">Nulla occaecat eiusmod</div></a><span class="br-divider d-md-none"></span>
+        <div class="content">Buscar serviços por</div></a><a class="br-item" href="https://www.gov.br/pt-br/servicos/servicos-por-publico-alvo">
+        <div class="content">Serviços por público alvo</div></a><a class="br-item d-none" href="javascript:void(0)">
       </div>
     </div>
     <div class="col-2"><a class="br-item header" href="https://www.gov.br/pt-br/apps/@@galeria-de-aplicativos">
-        <div class="content text-downup-01 text-bold text-uppercase">GALERIA DE APLICATIVOS</div>
-        <div class="support"><i class="fas fa-angle-up" aria-hidden="true"></i>
-        </div></a>
-      <div class="br-list d-none"><span class="br-divider d-md-none"></span><a class="br-item d-none" href="javascript:void(0)">
-          <div class="content d-none">Últimas notícias</div></a><a class="br-item d-none" href="javascript:void(0)">
-          <div class="content d-none">Educação Pesquisa</div></a><span class="br-divider d-md-none"></span>
-      </div>
+      <div class="content text-downup-01 text-bold text-uppercase">GALERIA DE APLICATIVOS</div>
+      <div class="support"><i class="fas fa-angle-up" aria-hidden="true"></i></div></a>
     </div>
     <div class="col-2"><a class="br-item header" href="https://www.gov.br/pt-br/noticias/ultimas-noticias">
-        <div class="content text-up-01 text-bold text-uppercase">notícias</div>
-        <div class="support"><i class="fas fa-angle-up" aria-hidden="true"></i>
-        </div></a>
+      <div class="content text-up-01 text-bold text-uppercase">NOTÍCIAS</div>
+      <div class="support"><i class="fas fa-angle-up" aria-hidden="true"></i></div></a>
       <div class="br-list"><span class="br-divider d-md-none"></span><a class="br-item" href="https://www.gov.br/pt-br/noticias/ultimas-noticias)">
-          <div class="content">Últimas notícias</div></a><a class="br-item" href="https://www.gov.br/pt-br/noticias/educacao-e-pesquisa">
-          <div class="content">Educação Pesquisa</div></a><a class="br-item d-none" href="javascript:void(0)">
-          <div class="content d-none">Duis incididunt consectetur</div></a><a class="br-item d-none" href="javascript:void(0)">
-          <div class="content d-none">Est ex deserunt</div></a><span class="br-divider d-md-none"></span>
+        <div class="content">Últimas notícias</div></a><a class="br-item" href="https://www.gov.br/pt-br/noticias/educacao-e-pesquisa">
+        <div class="content">Educação Pesquisa</div></a><a class="br-item d-none" href="javascript:void(0)"></a><span class="br-divider d-md-none"></span>
       </div>
     </div>
-        <div class="col-2">
+    <div class="col-2">
       <div class="d-inline">
-      <div class="row align-items-end justify-content-between py-2">
-        <div class="social-network">
-          <p class="text-up-01 text-extra-bold text-uppercase">Redes Sociais</p><a class="mr-3" href=""><a><i class="fab fa-twitter"></i></a><a class="mr-3" href="javascript:void(0);"><a><i class="fab fa-facebook-square"></i></a><a class="mr-3" href="javascript:void(0);"><a><i class="fab fa-flickr"></i></a><a class="mr-3" href="javascript:void(0);"><a><i class="fab fa-instagram-square"></i></a>
+        <div class="row align-items-end justify-content-between py-2">
+          <div class="social-network">
+            <p class="text-up-01 text-extra-bold text-uppercase">Redes Sociais</p><a class="mr-3" href=""><a><i class="fab fa-twitter"></i></a><a class="mr-3" href="javascript:void(0);"><a><i class="fab fa-facebook-square"></i></a><a class="mr-3" href="javascript:void(0);"><a><i class="fab fa-flickr"></i></a><a class="mr-3" href="javascript:void(0);"><a><i class="fab fa-instagram-square"></i></a>
+          </div>
         </div>
-        <div class="col assigns text-right"><i class="fas fa-info-circle"></i><img class="ml-4 d-none" src="https://cdn.dsgovserprodesign.estaleiro.serpro.gov.br/design-system/images/logo-assign-negative.png" alt="Imagem"/>
-        </div>
-      </div>
       </div>
     </div>
-    <div class="col-2"><a class="br-item header d-none" href="javascript:void(0)">
-        <div class="content text-down-01 text-bold text-uppercase d-none">Categoria 4</div>
-        <div class="support"><i class="fas fa-angle-up" aria-hidden="true"></i>
-        </div></a>
-      <div class="br-list"><span class="br-divider d-md-none"></span><a class="br-item d-none" href="javascript:void(0)">
-          <div class="content d-none">Qui esse</div></a><a class="br-item d-none" href="javascript:void(0)">
-          <div class="content d-none">Duis incididunt consectetur</div></a><a class="br-item d-none" href="javascript:void(0)">
-          <div class="content d-none">Qui esse</div></a><a class="br-item d-none" href="javascript:void(0)">
-          <div class="content d-none">Ex qui laborum consectetur aute commodo</div></a><span class="br-divider d-md-none"></span>
-      </div>
-    </div>
-    <div class="col-2"><a class="br-item header d-none" href="javascript:void(0)">
-        <div class="content text-down-01 text-bold text-uppercase d-none">Categoria 5</div>
-        <div class="support"><i class="fas fa-angle-up" aria-hidden="true"></i>
-        </div></a>
-      <div class="br-list"><span class="br-divider d-md-none"></span><a class="br-item d-none" href="javascript:void(0)">
-          <div class="content d-none">Nulla occaecat eiusmod</div></a><a class="br-item d-none" href="javascript:void(0)">
-          <div class="content d-none">Adipisicing culpa et ad consequat</div></a><a class="br-item d-none" href="javascript:void(0)">
-          <div class="content d-none">Adipisicing culpa et ad consequat</div></a><a class="br-item d-none" href="javascript:void(0)">
-          <div class="content d-none">Ex qui laborum consectetur aute commodo</div></a><span class="br-divider d-md-none"></span>
-      </div>
-    </div>
-    <div class="col-2"><a class="br-item header d-none" href="javascript:void(0)">
-        <div class="content text-down-01 text-bold text-uppercase">Categoria 6</div>
-        <div class="support"><i class="fas fa-angle-up" aria-hidden="true"></i>
-        </div></a>
-      <div class="br-list d-none"><span class="br-divider d-md-none"></span><a class="br-item" href="javascript:void(0)">
-          <div class="content d-none">Ex qui laborum consectetur aute commodo</div></a><a class="br-item d-none" href="javascript:void(0)">
-          <div class="content d-none">Ad deserunt nostrud</div></a><a class="br-item d-none" href="javascript:void(0)">
-          <div class="content d-none">Ex qui laborum consectetur aute commodo</div></a><a class="br-item d-none" href="javascript:void(0)">
-          <div class="content d-none">Adipisicing culpa et ad consequat</div></a><span class="br-divider d-md-none"></span>
-      </div>
-    </div>
-
   </div>
+
 </div><span class="br-divider my-3"></span>
+
 <div class="container-lg">
   <div class="info">
     <div class="text-down-01 text-medium pb-3">Texto destinado a exibição de informações relacionadas à&nbsp;<strong>licença de uso.</strong></div>
