--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,8 +11,7 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
-@import "components/bookmark_card";
-@import "components/bookmark_container";
+@import "components/bookmark";
 
 // Design System do Governo
 @import "@govbr/dsgov/dist/dsgov"
