--- a/app/assets/stylesheets/components/_bookmark.scss
+++ b/app/assets/stylesheets/components/_bookmark.scss
@@ -5,6 +5,7 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
+  position: relative;
 }
 
 .bookmark img {
@@ -37,5 +38,7 @@
 }
 
 .card-close {
-  align-items: flex-end;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
