--- a/app/assets/stylesheets/components/_bookmark_card.scss
+++ b/app/assets/stylesheets/components/_bookmark_card.scss
@@ -6,6 +6,7 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 .bookmark-card img {
@@ -32,12 +33,11 @@
   padding: 16px;
 }
 
-.bookmark-flex {
+.bookmark-content {
   padding: 16px;
-  display: flex;
   color: black;
 }
 
 .card-close {
-  align-items: flex-start;
+  align-items: flex-end;
 }
