--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,36 +21,36 @@
     <%= render 'shared/flashes' %>
     <div class="template-base">
       <!-- Atalhos de Teclado aqui -->
-      <nav id="skip-links">
-        <%= render 'shared/shortcuts' %>
-      </nav>
+      <%# <nav id="skip-links"> %>
+        <%# <%= render 'shared/shortcuts' %>
+      <%# </nav> %>
       <!-- Header aqui -->
-      <header style="padding: 16px;" class="br-header compact" id="header" data-sticky>
+      <header style="padding: 16px; position: sticky; top: 0; background-color: white; z-index: 1000;" class="br-header compact" id="header">
         <%= render 'shared/header' %>
       </header>
       <!-- Área de conteúdo -->
-      <main id="main" class="d-flex flex-fill">
+      <%# <main id="main" class="d-flex flex-fill"> %>
           <!-- Define a largura da página -->
-          <div class="container-lg">
-              <div class="row">
+          <%# <div class="container-lg"> %>
+              <%# <div class="row"> %>
                   <!-- Menu aqui -->
-                  <div class="br-menu pt-md-3" id="main-navigation">
-                  <%= render 'shared/menu' %>
-                  </div>
+                  <%# <div class="br-menu pt-md-3" id="main-navigation"> %>
+                  <%# <%= render 'shared/menu' %>
+                  <%# </div> %>
                   <!-- Coluna do conteúdo aqui -->
-                  <div class="col">
+                  <%# <div class="col"> %>
                       <!-- Breadcrumbs aqui -->
-                      <div class="br-breadcrumb">
-                        <%= render 'shared/breadcrumbs' %>
-                      </div>
+                      <%# <div class="br-breadcrumb"> %>
+                        <%# <%= render 'shared/breadcrumbs' %>
+                      <%# </div> %>
                       <!-- Conteúdo Principal aqui -->
-                      <div id="main-content" class="main-content pl-sm-3">
+                      <div id="main-content" class="main-content">
                         <%= yield %>
                       </div>
-                  </div>
-              </div>
-          </div>
-      </main>
+                  <%# </div> %>
+              <%# </div> %>
+          <%# </div> %>
+      <%# </main> %>
       <!-- Footer aqui -->
       <footer id="footer" class="br-footer">
         <%= render 'shared/footer' %>
