charta radar na show

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -77,4 +77,7 @@
     </div>
   </div>
 </div>
+<div class="container">
+  <%= render 'courses/show/radar', course: @course %>
+</div>
 <%= javascript_pack_tag 'import_gov' %>
