--- a/app/views/courses/show/_campus.html.erb
+++ b/app/views/courses/show/_campus.html.erb
@@ -59,5 +59,10 @@
   </div>
 </div>
 
-<%# <span class="br-divider my-3"></span>
-<p>Mapa aqui?</p> %>
+<span class="br-divider my-3"></span>
+<h5>Localização</h5>
+<div id="map"
+     style="width: 100%; height: 600px;"
+     data-markers="<%= @markers.to_json %>"
+     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+</div>
