--- a/app/views/courses/show/_admissao.html.erb
+++ b/app/views/courses/show/_admissao.html.erb
@@ -76,4 +76,4 @@
 <% course.segments.last.passing_scores.each do |score| %>
   <p><%= score.name %></p>
   <p><%= score.passing_score %></p>
-<% end %>
+<% end %>-->
