--- a/app/views/courses/show/_admissao.html.erb
+++ b/app/views/courses/show/_admissao.html.erb
@@ -4,62 +4,62 @@
   <tr>
     <td>
       <div>
-        <h6>Peso em Linguagens:</h6>
-        <p><%= course.weight_mat %></p>
+        <h6 class="text-center">Peso em Linguagens:</h6>
+        <p class="text-center"><%= course.weight_mat %></p>
       </div>
     </td>
     <td>
       <div>
-        <h6>Peso em Matemática:</h6>
-        <p><%= course.weight_mat %></p>
+        <h6 class="text-center">Peso em Matemática:</h6>
+        <p class="text-center"><%= course.weight_mat %></p>
       </div>
     </td>
     <td>
       <div></div>
-        <h6>Peso em Ciências Humanas:</h6>
-        <p><%= course.weight_ch %></p>
+        <h6 class="text-center">Peso em Ciências Humanas:</h6>
+        <p class="text-center"><%= course.weight_ch %></p>
       </div>
     </td>
     <td>
       <div>
-        <h6>Peso em Ciências da Natureza:</h6>
-        <p><%= course.weight_cn %></p></td>
+        <h6 class="text-center">Peso em Ciências da Natureza:</h6>
+        <p class="text-center"><%= course.weight_cn %></p></td>
       </div>
     <td>
       <div>
-        <h6>Peso em Redação:</h6>
-        <p><%= course.weight_red %></p>
+        <h6 class="text-center">Peso em Redação:</h6>
+        <p class="text-center"><%= course.weight_red %></p>
       </div>
     </td>
   </tr>
   <tr>
     <td>
       <div>
-        <h6>Mínimo em Linguagens</h6>
-        <p><%= course.min_lin %></p>
+        <h6 class="text-center">Mínimo em Linguagens</h6>
+        <p class="text-center"><%= course.min_lin %></p>
       </div>
     </td>
     <td>
       <div>
-        <h6>Mínimo em Matemática:</h6>
-        <p><%= course.min_mat %></p>
+        <h6 class="text-center">Mínimo em Matemática:</h6>
+        <p class="text-center"><%= course.min_mat %></p>
       </div>
     </td>
     <td>
       <div></div>
-        <h6>Mínimo em Ciências Humanas:</h6>
-        <p><%= course.min_ch %></p>
+        <h6 class="text-center">Mínimo em Ciências Humanas:</h6>
+        <p class="text-center"><%= course.min_ch %></p>
       </div>
     </td>
     <td>
       <div>
-        <h6>Mínimo em Ciências da Natureza:</h6>
-        <p><%= course.min_cn %></p></td>
+        <h6 class="text-center">Mínimo em Ciências da Natureza:</h6>
+        <p class="text-center"><%= course.min_cn %></p></td>
       </div>
     <td>
       <div>
-        <h6>Mínimo em Redação:</h6>
-        <p><%= course.min_red %></p>
+        <h6 class="text-center">Mínimo em Redação:</h6>
+        <p class="text-center"><%= course.min_red %></p>
       </div>
     </td>
   </tr>
