--- a/app/views/courses/show/_sobre.html.erb
+++ b/app/views/courses/show/_sobre.html.erb
@@ -15,19 +15,19 @@
 <h5>Indicadores do MEC</h5>
 <div class="d-flex justify-content-around">
   <div>
-    <h6>ENADE</h6>
-    <p><%= course.enade %></p>
+    <h6 class="text-center">ENADE</h6>
+    <p class="text-center"><%= course.enade %></p>
   </div>
   <div>
-    <h6>CPC</h6>
-    <p><%= course.cpc %></p>
+    <h6 class="text-center">CPC</h6>
+    <p class="text-center"><%= course.cpc %></p>
   </div>
   <div>
-    <h6>CC</h6>
-    <p><%= course.cc %></p>
+    <h6 class="text-center">CC</h6>
+    <p class="text-center"><%= course.cc %></p>
   </div>
   <div>
-    <h6>IDD</h6>
-    <p><%= course.idd %></p>
+    <h6 class="text-center">IDD</h6>
+    <p class="text-center"><%= course.idd %></p>
   </div>
 </div>
