--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,8 @@
 
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://source.unsplash.com/C7B-ExXpOIE);">
   <div class="container">
-    <h1>Estudar em uma faculdade passa por muitas <strong>escolhas</strong> compare os cursos e <strong>decida para onde quer ir</strong>!</h1>
-    <p>Veja as características de cada curso em nossa página</p>
+    <h1>Escolher uma faculdade passa por muitas <strong>análises</strong>.<br> Compare (de verdade) os cursos e <strong>decida para onde quer ir</strong>!</h1>
+    <p>Veja as características de cada um deles em nossa página</p>
     <p><span id="banner-typed-text"></span></p>
     <%= link_to "Buscar Cursos", courses_path, class:"br-button primary text-decoration-none" %>
   </div>
