comment sisu results

--- a/app/views/courses/show/_admissao.html.erb
+++ b/app/views/courses/show/_admissao.html.erb
@@ -65,7 +65,7 @@
   </tr>
 </table>
 
-<h5>Último resultado do SiSU</h5>
+<!--<h5>Último resultado do SiSU</h5>
 <p><i class="fa fa-play" aria-hidden="true"></i> Referência: <%= course.segments.last.sisu_edition %></p>
 
 <table>
@@ -79,5 +79,5 @@
       </td>
     </tr>
   <% end %>
-</table>
+</table>-->
 <br>
